--- a/FORM_BANK_ACCOUNT/FORM_BANK_ACCOUNT.csproj
+++ b/FORM_BANK_ACCOUNT/FORM_BANK_ACCOUNT.csproj
@@ -103,6 +103,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="About.aspx" />
+    <Content Include="App_Data\FormAccount.mdf" />
+    <Content Include="App_Data\FormAccount_log.ldf">
+      <DependentUpon>FormAccount.mdf</DependentUpon>
+    </Content>
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -243,9 +247,7 @@
       <DependentUpon>WebForm1.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
